syntax = "proto3";

package agent.v1;

import "steprun/v1/steprun.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/arcentrix/arcentra/api/agent/v1;agentv1";

// AgentService - Main interface for communication between Agent and Server
service AgentService {
  // Heartbeat - Agent periodically sends heartbeat to Server
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}

  // Register - Agent registers with Server on startup
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  // Unregister - Agent unregisters from Server on shutdown
  rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}

  // FetchStepRun - Agent actively pulls step runs to execute
  rpc FetchStepRun(FetchStepRunRequest) returns (FetchStepRunResponse) {}

  // Report step run status - Agent reports status changes during step run execution
  rpc ReportStepRunStatus(ReportStepRunStatusRequest) returns (ReportStepRunStatusResponse) {}

  // Cancel step run - Server notifies Agent to cancel a running step run
  rpc CancelStepRun(CancelStepRunRequest) returns (CancelStepRunResponse) {}

  // Update labels - Dynamically update Agent's labels
  rpc UpdateLabels(UpdateLabelsRequest) returns (UpdateLabelsResponse) {}

  // Connect - Bidirectional control plane channel
  rpc Connect(stream ConnectRequest) returns (stream ConnectResponse) {}
}

// ============ Control Plane ============

// Connect request from Agent to Gateway
message ConnectRequest {
  string agent_id = 1;                      // Agent unique identifier
  string request_id = 2;                    // Client request ID for tracing
  oneof payload {
    ConnectHeartbeat heartbeat = 3;         // Heartbeat
    TaskAck task_ack = 4;                   // Command ack
    TaskStatus task_status = 5;             // Task execution status
  }
}

// Connect response from Gateway to Agent
message ConnectResponse {
  string agent_id = 1;                      // Agent unique identifier
  string command_id = 2;                    // Command ID for ack and idempotency
  oneof payload {
    TaskDispatch task_dispatch = 3;         // Task dispatch
    TaskCancel task_cancel = 4;             // Task cancel
  }
}

// Heartbeat data over Connect
message ConnectHeartbeat {
  int64 timestamp = 1;                      // Timestamp in seconds
  AgentStatus status = 2;                   // Agent status
  int32 running_step_runs_count = 3;        // Running step runs count
  int32 max_concurrent_step_runs = 4;       // Maximum concurrent step runs
}

// Task dispatch command
message TaskDispatch {
  repeated StepRun step_runs = 1;           // Step runs to execute
}

// Task cancel command
message TaskCancel {
  string step_run_id = 1;                   // Step run ID
  string reason = 2;                        // Cancellation reason
}

// Command acknowledgment
message TaskAck {
  string command_id = 1;                    // Command ID from ConnectResponse
  AckStatus status = 2;                     // Ack status
  string message = 3;                       // Ack message
}

// Ack status enum
enum AckStatus {
  ACK_STATUS_UNSPECIFIED = 0;
  ACK_STATUS_OK = 1;
  ACK_STATUS_FAILED = 2;
}

// Task status update
message TaskStatus {
  string step_run_id = 1;                   // Step run ID
  steprun.v1.StepRunStatus status = 2;      // Step run status
  int32 exit_code = 3;                      // Exit code
  string error_message = 4;                 // Error message
  int64 timestamp = 5;                      // Timestamp in seconds
  map<string, string> metrics = 6;          // Execution metrics
}

// Agent status enum
enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_ONLINE = 1;   // Online
  AGENT_STATUS_OFFLINE = 2;  // Offline
  AGENT_STATUS_BUSY = 3;     // Busy
  AGENT_STATUS_IDLE = 4;     // Idle
}

// Heartbeat request
message HeartbeatRequest {
  string agent_id = 1;                    // Agent unique identifier
  string agent_name = 2;                  // Agent name
  AgentStatus status = 3;                 // Agent current status
  int32 running_step_runs_count = 4;      // Number of running step runs
  int64 timestamp = 5;                    // Timestamp in seconds
}

// Heartbeat response
message HeartbeatResponse {
  bool success = 1;
  string message = 2;
  int64 timestamp = 3;                    // Server timestamp (for time synchronization)
}

// Agent registration request
message RegisterRequest {
  string agent_id = 1;                    // Agent unique identifier (optional, generated by Server if not provided)
  string token = 2;                       // Registration token (required, generated when creating agent)
  string ip = 3;                          // IP address
  string os = 4;                          // Operating system
  string arch = 5;                        // Architecture (amd64, arm64, etc.)
  string version = 6;                     // Agent version
  int32 max_concurrent_step_runs = 7;    // Maximum concurrent step runs
  map<string, string> labels = 8;        // Custom labels
}

// Agent registration response
message RegisterResponse {
  bool success = 1;
  string message = 2;
  string agent_id = 3;                    // Agent ID assigned or confirmed by Server
  int64 heartbeat_interval = 4;           // Heartbeat interval (seconds)
  map<string, string> labels = 5;        // Agent labels assigned by Server
}

// Agent unregistration request
message UnregisterRequest {
  string agent_id = 1;                    // Agent ID
  string reason = 2;                      // Unregistration reason
}

// Agent unregistration response
message UnregisterResponse {
  bool success = 1;
  string message = 2;
}

// Fetch step run request
message FetchStepRunRequest {
  string agent_id = 1;                    // Agent ID (required)
  int32 max_step_runs = 2;                // Maximum number of step runs to fetch (default 1)
}

// Fetch step run response
message FetchStepRunResponse {
  bool success = 1;
  string message = 2;
  repeated StepRun step_runs = 3;        // List of assigned step runs
}

// StepRun definition - Represents a step execution (StepRun)
// According to DSL: Step â†’ StepRun
message StepRun {
  string step_run_id = 1;                 // Step run ID (required)
  string pipeline_id = 2;                 // Pipeline ID
  string pipeline_run_id = 3;            // Pipeline run ID
  string job_id = 4;                      // Job ID
  string job_name = 5;                    // Job name
  string step_name = 6;                  // Step name
  int32 step_index = 7;                  // Step index in job (0-based)
  
  // Step execution configuration (plugin-based)
  string uses = 8;                       // Plugin identifier (required, from Step.uses)
  string action = 9;                     // Plugin action (optional, from Step.action)
  google.protobuf.Struct args = 10;      // Plugin parameters (from Step.args)
  
  // Execution context
  map<string, string> env = 11;          // Environment variables
  string workspace = 12;                 // Working directory
  string timeout = 13;                   // Timeout (e.g., "30m", "1h")
  
  // Runtime configuration
  string image = 14;                     // Docker image (optional, for containerized execution)
  map<string, string> secrets = 15;      // Secret information
  
  // Artifact configuration
  repeated ArtifactConfig artifacts = 16; // Artifact configuration
  
  // Execution control
  bool continue_on_error = 17;           // Continue execution even if step fails
  string when = 18;                      // Condition expression (evaluate before execution)
  
  // Agent selection (for reference, already matched)
  AgentSelector agent_selector = 19;    // Agent selector that matched this agent
  bool run_on_agent = 20;               // Run on agent (if true, step runs on agent; if false, runs locally)
  
  // Plugin requirements
  repeated PluginInfo plugins = 21;      // List of plugins required by step run
}

// Artifact configuration
message ArtifactConfig {
  string name = 1;                       // Artifact name
  string path = 2;                       // Artifact path (supports glob pattern)
  string destination = 3;                // Target storage path
  bool expire = 4;                       // Whether it expires
  int64 expire_days = 5;                 // Expiration days
}

// Report step run status request
message ReportStepRunStatusRequest {
  string agent_id = 1;                    // Agent ID (required)
  string step_run_id = 2;                 // Step run ID (required)
  steprun.v1.StepRunStatus status = 3;    // Step run status
  int32 exit_code = 4;                    // Exit code
  string error_message = 5;               // Error message
  int64 start_time = 6;                  // Start time (Unix timestamp in seconds)
  int64 end_time = 7;                    // End time (Unix timestamp in seconds)
  map<string, string> metrics = 8;       // Step run execution metrics
}

// Report step run status response
message ReportStepRunStatusResponse {
  bool success = 1;
  string message = 2;
}

// Cancel step run request
message CancelStepRunRequest {
  string agent_id = 1;                    // Agent ID (required)
  string step_run_id = 2;                 // Step run ID (required)
  string reason = 3;                      // Cancellation reason
}

// Cancel step run response
message CancelStepRunResponse {
  bool success = 1;
  string message = 2;
}

// Update agent labels request
message UpdateLabelsRequest {
  string agent_id = 1;                    // Agent ID (required)
  map<string, string> labels = 2;         // Labels to update (complete replacement)
  bool merge = 3;                         // Merge mode (true=merge, false=replace)
}

// Update agent labels response
message UpdateLabelsResponse {
  bool success = 1;
  string message = 2;
  map<string, string> labels = 3;        // Updated labels
}

// ============ Agent Selector ============

// AgentSelector defines criteria for selecting an agent
message AgentSelector {
  map<string, string> match_labels = 1;  // MatchLabels requires all specified labels to match (AND logic)
  repeated LabelExpression match_expressions = 2; // MatchExpressions provides more complex matching rules
}

// LabelExpression defines a label matching expression
message LabelExpression {
  string key = 1;                         // Label key (required)
  string operator = 2;                    // Operator: In, NotIn, Exists, NotExists, Gt, Lt (required)
  repeated string values = 3;             // Values for operator comparison
}

// ============ Plugin Distribution Related ============

// Plugin information
message PluginInfo {
  string plugin_id = 1;                   // Plugin ID
  string name = 2;                        // Plugin name
  string version = 3;                     // Version number
  string checksum = 4;                    // SHA256 checksum
  int64 size = 5;                         // File size (bytes)
  string download_url = 6;                // Download URL (optional, for CDN distribution)
  PluginLocation location = 7;           // Plugin location
}

// Plugin location
enum PluginLocation {
  PLUGIN_LOCATION_UNSPECIFIED = 0;
  PLUGIN_LOCATION_SERVER = 1;            // Server filesystem
  PLUGIN_LOCATION_STORAGE = 2;           // Object storage
  PLUGIN_LOCATION_REGISTRY = 3;          // Plugin registry
}

